<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_dark_mode"
        android:title="@string/dark_mode"
        android:checkable="true"
        android:checked="true" />
    <item
        android:id="@+id/menu_rotate_compass"
        android:title="@string/tourner_la_carte"
        android:checkable="true"
        android:checked="false"/>
    <item
        android:id="@+id/menu_battery_saver"
        android:title="@string/conomie_de_batterie"
        android:checkable="true" />
    <item
        android:id="@+id/menu_rotate_manual"
        android:title="@string/rotation_manuelle"
        android:checkable="true"
        android:checked="false"/>
    <item
        android:id="@+id/menu_reset_rotation"
        android:title="@string/orienter_vers_le_nord"
        android:checkable="false" />
    <item
        android:id="@+id/menu_map_list"
        android:title="@string/g_rer_les_cartes" />
</menu>